# project_generator

./: LICENSE  README.md  pyproject.toml  setup.cfg
project_generator/: __main__.py
